--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,13 @@ body {
 }
 
 #game-music {
-  margin-left: 450px
+  width: 900px;
+  margin: auto;
 }
 
 .game-content {
   height: 550px;
   width: 900px;
-  margin-left: 175px;
+  margin: auto;
   border: 1px solid white;
 }
-
